--- a/CSS/style.css
+++ b/CSS/style.css
@@ -122,30 +122,28 @@ nav .signIn-btn{
     margin-bottom: 170px;
 }
 .winerrs-text{
-    width: 302px;
     line-height: 160%;
     text-align: center;
     color: #FFFFFF;
     opacity: 0.7;
     margin: 0 auto;
+    font-size: 11px;
 }
 .winers-title {
-    margin:47px auto 30px auto;
+    font-size: 18px;
+    margin-top: 47px;
+    margin-bottom: 30px;
+}
 
-}
-.winners-img{
-    display:block;
-    margin: 0 auto;
-}
 .box{
     background: #0F1724 ;
     backdrop-filter: blur(200px);
     border-radius: 10px;
-    padding:20px
+    width: 300px;
+    height: 315px;
+    padding: 10px;
 }
-.margin-img{
-    margin-top: 30px;
-}
+
 .round-btn{
     display: block;
     width: 15px;
@@ -269,4 +267,8 @@ footer{
 }
 .store{
     width: 100px;
+}
+.winners-img{
+    display: flex;
+    margin:  0 auto;
 }
